Gateway/gateway.yaml
# See https://medium.com/@disha.20.10/introduction-to-the-gateway-api-revolutionizing-kubernetes-networking-7b0c9a696038
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: my-cloud-gatewayclass
spec:
  controllerName: example.com/cloud-lb-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-example-gateway
spec:
  gatewayClassName: my-cloud-gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-cert
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-example-http-route
spec:
  parentRefs:
    - name: my-example-gateway # such as HTTPRoute, TCPRoute to reference a parent Gateway that will be handling the traffic.
  backendRefs:
    - name: app-service
      port: 80
      weight: 80
    - name: another-service
      port: 80
      weight: 20
