Gateway/nginx.yaml
# kubectl get gateways -n example-namespace
apiVersion: v1
kind: Namespace
metadata:
  name: example-namespace
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: example-gateway
  namespace: example-namespace
spec:
  gatewayClassName: nginx # assumes you're using an NGINX-based Gateway Controller. Change this value based on your controller (e.g., istio for Istio or traefik for Traefik).
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: example-namespace
spec:
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sample-service
          port: 80
